# GEN-AI-INDUSTRY-PROJECT_2

AI POWERED JOB ANALYZER/: AI_Powered_Job_Analyzer_Colab (1).ipynb  README.md  ai_powered_job_analyzer_colab.py
AI Travel Itinerary Planner with Kubernetes, GCP, and ELK Stack/: AI_Trip_Planner_GCP_Pipeline_Final.ipynb  README.md  ai_trip_planner_gcp_pipeline_final.py
AI-Powered Anime Recommendation System/: AI_Anime_Recommender.ipynb  AI_Anime_Recommender_fixed.ipynb  README.md  ai_anime_recommender.py
Academic Risk & Engagement Prediction System/: README .md  student_engagement_colab.ipynb  student_engagement_colab.py  student_engagement_fixed.ipynb
AutoGen Data Analyzer GPT Build an AI-Powered Data Analysis System/: README.md
Autonomous Blog Generation Agent with LangGraph & FastAPI/: Autonomous_blog_Agent.ipynb  README.md  autonomous_blog_agent.py
Azure Multi-Modal Engine using LangGraph/: Azure_Multi_Modal_Compliance_Orchestration_Engine_using_LangGraph.ipynb  README.md  azure_multi_modal_compliance_orchestration_engine_using_langgraph.py
Chest Disease Identification/: End_to_End_Chest_Disease_Classification.ipynb  README.md  end_to_end_chest_disease_classification.py
DOC RAG Tool/: Agentic_RAG_Groq_Colab.ipynb  Agentic_RAG_Tool.ipynb  Agentic_RAG_Tool_App.ipynb  Agentic_RAG_Tool_App_Fixed.ipynb  README.md  agentic_rag_tool.py  streamlit_app.py
Diamonds Data Analysis/: Diamonds_ML_Production_Final.ipynb  README.md  (+1 more)
Pipecat AI Interview Coach Real-Time Voice Interaction/server/: env.example  interview_config.json  pyproject.toml
(+142 files in other folders)
