[project]
name = "simple-chatbot"
version = "0.1.0"
description = "Simple chatbot built with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.3",
    "loguru>=0.7.3",
    "pipecat-ai[daily,deepgram,elevenlabs,google,groq,local-smart-turn-v3,openai,runner,silero,webrtc]",
    "pipecatcloud",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]
